Created final draft version.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -102,14 +102,14 @@
   year={2004}
 }
 
-@article{weber2007evm,
-  title={{An embeddable virtual machine for state space generation}},
-  author={Weber, M.},
-  journal={Proc. 14th SPIN Workshop, LNCS},
-  volume={4595},
-  pages={168--185},
-  year={2007},
-  publisher={Springer}
+@inproceedings{weber2007evm,
+  author    = {Michael Weber},
+  title     = {An Embeddable Virtual Machine for State Space Generation},
+  booktitle = {SPIN},
+  year      = {2007},
+  pages     = {168-186},
+  ee        = {http://dx.doi.org/10.1007/978-3-540-73370-6_12},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
 }
 
 @book{kifer2006dsa,
@@ -128,7 +128,7 @@
 @misc{nipsvm,
   title={{NIPS VM}},
   author={Weber, M.},
-  note={\url{http://www3.cs.utwente.nl/~michaelw/nips/}},
+  note={\url{http://www.cs.utwente.nl/~michaelw/nips/}},
 }
 
 @misc{noll2004fnv,
