Some final fixes.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -103,7 +103,7 @@
 }
 
 @inproceedings{weber2007evm,
-  author    = {Michael Weber},
+  author    = {M. Weber},
   title     = {An Embeddable Virtual Machine for State Space Generation},
   booktitle = {SPIN},
   year      = {2007},
