--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -13,7 +13,7 @@
 
 \begin{document}
 
-\title{Evaluation of a Cache-Oblivious Data Structure [draft-2]}
+\title{Evaluation of a Cache-Oblivious Data Structure}
 
 \numberofauthors{1}
 \author{Maks Verver\\ \email{m.verver@student.utwente.nl}}
